--- a/emocional.html
+++ b/emocional.html
@@ -69,11 +69,6 @@
    <!-- ======= Header ======= -->
   
    <header id="header" class="fixed-top">
-    <div class="social-links text-center text-md-right pt-3 pt-md-0">
-      <a href="https://www.facebook.com/people/EMP-Oficial/61554028190664/" class="facebook depois"><i class="bx bxl-facebook"></i></a>
-      <a href="https://www.instagram.com/emp_oficialsp/?hl=pt" class="instagram depois"><i class="bx bxl-instagram"></i></a>
-      <a href="http://www.linkedin.com/in/emp-oficial" class="linkedin depois"><i class="bx bxl-linkedin"></i></a>
-    </div>
     <div class="container d-flex align-items-center">
 
       <h1 class="logo me-auto"><a href="index.html"> <img src="./assets/imagens/logo_emp.png" alt="Logo EMP"></a></h1>
@@ -133,26 +128,26 @@
 
       <!-- Signup From -->
       <div class="form signup_form">
-        <form id="signupForm">
+        <form action="#">
           <h2>Cadastrar</h2>
-  
+
           <div class="input_box">
-              <input type="email" id="email" placeholder="Insira seu email" required />
-              <i class="uil uil-envelope-alt email"></i>
+            <input type="email" placeholder="Insira seu email" required />
+            <i class="uil uil-envelope-alt email"></i>
           </div>
           <div class="input_box">
-              <input type="password" id="password" placeholder="Crie sua senha" required />
-              <i class="uil uil-lock password"></i>
-              <i class="uil uil-eye-slash pw_hide"></i>
+            <input type="password" placeholder="Crie sua senha" required />
+            <i class="uil uil-lock password"></i>
+            <i class="uil uil-eye-slash pw_hide"></i>
           </div>
           <div class="input_box">
-              <input type="password" id="confirmPassword" placeholder="Confirme sua senha" required />
-              <i class="uil uil-lock password"></i>
-              <i class="uil uil-eye-slash pw_hide"></i>
+            <input type="password" placeholder="Confirme sua senha" required />
+            <i class="uil uil-lock password"></i>
+            <i class="uil uil-eye-slash pw_hide"></i>
           </div>
-  
-          <button type="button" class="button" onclick="redirecionarLogin()">Continuar</button>
-  
+
+          <button class="button">Cadastra-se</button>
+
           <div class="login_signup">Já possui uma conta? <a href="#" id="login">Login</a></div>
         </form>
       </div>
@@ -400,14 +395,14 @@
             </div>
             <div class="carousel-inner">
               <div class="carousel-item active" data-bs-interval="1000">
-                <img src="./assets/img/trainers/trainer-1.jpg" class="d-block w-100 h-100" style="object-fit: cover;" alt="...">
+                <img src="./assets/img/testimonials/team-4.jpg" class="d-block w-100 h-100" style="object-fit: cover;" alt="...">
                 <div class="carousel-caption d-none d-md-block">
                   <h5>Gleyce slide label</h5>
                   <p>Some representative placeholder content for the first slide.</p>
                 </div>
               </div>
               <div class="carousel-item" data-bs-interval="1000">
-                <img src="./assets/img/trainers/trainer-3.jpg" class="d-block w-100" alt="...">
+                <img src="./assets/img/testimonials/team-3.jpg" class="d-block w-100" alt="...">
                 <div class="carousel-caption d-none d-md-block">
                   <h5 class="card-title">Card title</h5>
                   <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -606,6 +601,7 @@
         }
   }
 </script>
+
 
 </body>
 
