--- a/servicos.html
+++ b/servicos.html
@@ -59,11 +59,6 @@
    <!-- ======= Header ======= -->
   
    <header id="header" class="fixed-top">
-    <div class="social-links text-center text-md-right pt-3 pt-md-0">
-      <a href="https://www.facebook.com/people/EMP-Oficial/61554028190664/" class="facebook depois"><i class="bx bxl-facebook"></i></a>
-      <a href="https://www.instagram.com/emp_oficialsp/?hl=pt" class="instagram depois"><i class="bx bxl-instagram"></i></a>
-      <a href="http://www.linkedin.com/in/emp-oficial" class="linkedin depois"><i class="bx bxl-linkedin"></i></a>
-    </div>
     <div class="container d-flex align-items-center">
 
       <h1 class="logo me-auto"><a href="index.html"> <img src="./assets/imagens/logo_emp.png" alt="Logo EMP"></a></h1>
@@ -123,26 +118,26 @@
 
       <!-- Signup From -->
       <div class="form signup_form">
-        <form id="signupForm">
+        <form action="#">
           <h2>Cadastrar</h2>
-  
+
           <div class="input_box">
-              <input type="email" id="email" placeholder="Insira seu email" required />
-              <i class="uil uil-envelope-alt email"></i>
+            <input type="email" placeholder="Insira seu email" required />
+            <i class="uil uil-envelope-alt email"></i>
           </div>
           <div class="input_box">
-              <input type="password" id="password" placeholder="Crie sua senha" required />
-              <i class="uil uil-lock password"></i>
-              <i class="uil uil-eye-slash pw_hide"></i>
+            <input type="password" placeholder="Crie sua senha" required />
+            <i class="uil uil-lock password"></i>
+            <i class="uil uil-eye-slash pw_hide"></i>
           </div>
           <div class="input_box">
-              <input type="password" id="confirmPassword" placeholder="Confirme sua senha" required />
-              <i class="uil uil-lock password"></i>
-              <i class="uil uil-eye-slash pw_hide"></i>
+            <input type="password" placeholder="Confirme sua senha" required />
+            <i class="uil uil-lock password"></i>
+            <i class="uil uil-eye-slash pw_hide"></i>
           </div>
-  
-          <button type="button" class="button" onclick="redirecionarLogin()">Continuar</button>
-  
+
+          <button class="button">Cadastra-se</button>
+
           <div class="login_signup">Já possui uma conta? <a href="#" id="login">Login</a></div>
         </form>
       </div>
@@ -192,8 +187,8 @@
                 </div>
   
                 <div class="content-servicos" style="width: 300px; height: 250px; margin-top: 10px;">
-                  <img class="sevicos-img" src="./assets/imagens/negocio.png" width="150px" height="150px" alt="">
-                  <h3>Contas</h3>
+                  <img class="sevicos-img" src="./assets/imagens/taxa.png" width="150px" height="150px" alt="">
+                  <h3>Fluxo de Caixa</h3>
                 </div>
   
                 <div class="content-servicos" style="width: 300px; height: 250px; margin-top: 10px;">
@@ -281,11 +276,11 @@
         <script src="https://pingendo.com/assets/bootstrap/bootstrap-4.0.0-alpha.6.min.js"></script>
       </body>
 
-      <!-- ======= Pricing Section - Planos ======= -->
+  <!-- ======= Pricing Section - Planos ======= -->
   <section id="pricing" class="pricing ">
     <div class="pricing-header px-3 py-3 pt-md-5 pb-md-4 mx-auto text-center">
       <h1 class="display-4">Planos</h1>
-      <p class="lead">Empodere-se com nossos planos.Juntas, somos invencíveis!</p>
+      <p class="lead">Empodere-se com nossos planos. </p>
     </div>
     <div class="container ">
 
@@ -296,12 +291,15 @@
             <h3 class="cor-letra" >Básico</h3>
             <h4>Gratuito</h4>
             <ul>
-              <li>Fluxo de caixa</li>
-              <li>Capital de giro</li>
-              <li>Suporte emocional</li>
-              <li class="na">Alerta</li>
-              <li class="na">Dashboard</li>
-              <li class="na">KPI</li>
+              <li class="Icon_X"> <img src="./assets/imagens/Vector_valido.png" alt="">
+                Fluxo de caixa</li>
+              <li class="Icon_X"> <img  src="./assets/imagens/Vector_valido.png" alt="">
+               Capital de giro</li>
+              <li class="Icon_X"> <img  src="./assets/imagens/Vector_valido.png" alt="">
+               Suporte emocional</li>
+              <li class="Icon_X"> <img  src="./assets/imagens/Vector_error.png" alt="">  Alerta</li>
+              <li class="Icon_X"><img   src="./assets/imagens/Vector_error.png" alt="">  Dashboard</li>
+              <li class="Icon_X"> <img  src="./assets/imagens/Vector_error.png" alt="">  KPI</li>
             </ul>
             <div class="btn-wrap">
               <a href="#" class="btn-buy">Assinar</a>
@@ -314,12 +312,12 @@
             <h3 class="cor-letra">Avançado</h3>
             <h4><sup>R$</sup>117,90<span> /mês</span></h4>
             <ul>
-              <li>Fluxo de caixa</li>
-              <li>Capital de giro</li>
-              <li>Suporte emocional</li>
-              <li>Alerta</li>
-              <li>Dashboard</li>
-              <li>KPI</li>
+              <li  class="Icon_X"> <img src="./assets/imagens/Vector_valido.png" alt="">  Fluxo de caixa</li>
+              <li  class="Icon_X"> <img src="./assets/imagens/Vector_valido.png" alt="">  Capital de giro</li>
+              <li  class="Icon_X"> <img src="./assets/imagens/Vector_valido.png" alt="">  Suporte emocional</li>
+              <li  class="Icon_X"> <img src="./assets/imagens/Vector_valido.png" alt="">  Alerta</li>
+              <li  class="Icon_X"> <img src="./assets/imagens/Vector_valido.png" alt="">  Dashboard</li>
+              <li  class="Icon_X"> <img src="./assets/imagens/Vector_valido.png" alt="">  KPI</li>
             </ul>
             <div class="btn-wrap">
               <a href="#" class="btn-buy">Assinar</a>
@@ -334,90 +332,88 @@
 
   <!-- Clientes -->
    <!-- ======= Testimonials Section ======= -->
-   <section id="testimonials" class="testimonials">
-    <div class="container" data-aos="fade-up">
+  <section id="testimonials" class="testimonials section-bg">
+    <div class="container">
 
-      <div class="section-title">
-        <p>Vejam o que nossos clientes dizem</p>
+      <div class="pricing-header px-3 py-3 pt-md-5 pb-md-4 mx-auto text-center">
+        <h1 class="display-4">Depoimentos</h1>
+        <p class="Depoimento">
+            Microempreendedoras transformam seus sonhos em sucesso. Veja o que as nossas clientes têm a dizer sobre suas jornadas inspiradoras.
+        </p>
       </div>
 
       <div class="testimonials-slider swiper" data-aos="fade-up" data-aos-delay="100">
         <div class="swiper-wrapper">
 
           <div class="swiper-slide">
-            <div class="testimonial-wrap">
-              <div class="testimonial-item">
-                <img src="./assets/img/undefined.jpg" class="testimonial-img" alt="">
-                <h3>Sarah Rodrigues</h3>
-                <h4>Microempreendedora</h4>
-                <p>
-                  <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                  Com a EMP,  meus problemas financeiros se tornaram desafios superáveis. A plataforma é uma aliada essencial para o crescimento do nosso negócio.
-                  <i class="bx bxs-quote-alt-right quote-icon-right"></i>
-                </p>
-              </div>
+            <div class="testimonial-item">
+              <p>
+                <i class="bx bxs-quote-alt-left quote-icon-left"></i>
+                Sou imensamente grata por ter descoberto essa plataforma incrível! As microempreendedoras aqui não apenas transformam seus sonhos em sucesso, mas também compartilham suas jornadas de forma inspiradora.
+                <i class="bx bxs-quote-alt-right quote-icon-right"></i>
+              </p>
+              <img src="assets/img/Luana.jpeg" class="testimonial-img" alt="">
+              <h3>Luana Santos</h3>
+              <h4>Microempreendedora</h4>
             </div>
           </div><!-- End testimonial item -->
 
           <div class="swiper-slide">
-            <div class="testimonial-wrap">
-              <div class="testimonial-item">
-                <img src="assets/img/testimonials/testimonials-2.jpg" class="testimonial-img" alt="">
-                <h3>Bianca Ferreira</h3>
-                <h4>Microempreendedora</h4>
-                <p>
-                  <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                  EMP é simplesmente incrível! Trasformou a gestão financeira do meu negócio e ecomomizou meu tempo. Recomendo fortemente!
-                  <i class="bx bxs-quote-alt-right quote-icon-right"></i>
-                </p>
-              </div>
+            <div class="testimonial-item">
+              <p>
+                <i class="bx bxs-quote-alt-left quote-icon-left"></i>
+                É incrível como essa plataforma vai além das expectativas, abraçando aspectos tão essenciais. Recomendo a todas que buscam não apenas eficiência, mas também um cuidado especial com o bem-estar. 👏🌟"
+                <i class="bx bxs-quote-alt-right quote-icon-right"></i>
+              </p>
+              <img src="assets/img/Ana_Paula.jpeg" class="testimonial-img" alt="">
+              <h3>Ana Paula</h3>
+              <h4>Microempreendedora</h4>
+            </div>
+
+            
+          </div><!-- End testimonial item -->
+
+          <div class="swiper-slide">
+            <div class="testimonial-item">
+              <p>
+                <i class="bx bxs-quote-alt-left quote-icon-left"></i>
+                Iniciando minha jornada, encontrei desafios devido à falta de conhecimento. A plataforma e o diálogo com mulheres na área têm sido essenciais, proporcionando suporte valioso. A cada obstáculo, descubro soluções e inspirações.
+                <i class="bx bxs-quote-alt-right quote-icon-right"></i>
+              </p>
+              <img src="assets/img/Izabel.jpeg" class="testimonial-img" alt="">
+              <h3>Maria Izabel</h3>
+              <h4>Microempreendedora </h4>
             </div>
           </div><!-- End testimonial item -->
 
           <div class="swiper-slide">
-            <div class="testimonial-wrap">
-              <div class="testimonial-item">
-                <img src="assets/img/testimonials/testimonials-3.jpg" class="testimonial-img" alt="">
-                <h3>Jena Karlis</h3>
-                <h4>Store Owner</h4>
-                <p>
-                  <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                  Com a EMP,  meus problemas financeiros se tornaram desafios superáveis. A plataforma é uma aliada essencial para o crescimento do nosso negócio.
-                  <i class="bx bxs-quote-alt-right quote-icon-right"></i>
-                </p>
-              </div>
+            <div class="testimonial-item">
+              <p>
+                <i class="bx bxs-quote-alt-left quote-icon-left"></i>
+                Com a EMP, finalmente consegui organizar toda a parte financeira do meu negócio! Agora, faço uma administração mais eficiente e obtenho total controle. Esta plataforma é realmente transformadora, Recomendo a todos em busca de praticidade e sucesso financeiro! 
+                <i class="bx bxs-quote-alt-right quote-icon-right"></i>
+              </p>
+              <img src="assets/img/Leia Lima.png" class="testimonial-img" alt="">
+              <h3>Leia Lima</h3>
+              <h4>Microempreendedora</h4>
             </div>
           </div><!-- End testimonial item -->
 
           <div class="swiper-slide">
-            <div class="testimonial-wrap">
-              <div class="testimonial-item">
-                <img src="assets/img/testimonials/testimonials-4.jpg" class="testimonial-img" alt="">
-                <h3>Matt Brandon</h3>
-                <h4>Freelancer</h4>
-                <p>
-                  <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                  EMP é simplesmente incrível! Trasformou a gestão financeira do meu negócio e ecomomizou meu tempo. Recomendo fortemente!
-                  <i class="bx bxs-quote-alt-right quote-icon-right"></i>
-                </p>
-              </div>
+            <div class="testimonial-item">
+              <p>
+                <i class="bx bxs-quote-alt-left quote-icon-left"></i>
+                Agora, com a plataforma, meu dia a dia ficou muito mais prático, e o controle do meu gerenciamento financeiro é incrível! Além disso, tenho a oportunidade de compartilhar minha experiência com outras mulheres, ajudando a diminuir as dificuldades que enfrentam.
+                <i class="bx bxs-quote-alt-right quote-icon-right"></i>
+              </p>
+              <img src="assets/img/Ediline_Santos.jpeg" class="testimonial-img" alt="">
+              <h3>Edilene Santos</h3>
+              <h4>Microempreendedora</h4>
             </div>
+
+            
           </div><!-- End testimonial item -->
 
-          <div class="swiper-slide">
-            <div class="testimonial-wrap">
-              <div class="testimonial-item">
-                <img src="assets/img/testimonials/testimonials-5.jpg" class="testimonial-img" alt="">
-                <h3>John Larson</h3>
-                <h4>Entrepreneur</h4>
-                <p>
-                  <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                  EMP é simplesmente incrível! Trasformou a gestão financeira do meu negócio e ecomomizou meu tempo. Recomendo fortemente!
-                  <i class="bx bxs-quote-alt-right quote-icon-right"></i>
-                </p>
-              </div>
-            </div>
-          </div><!-- End testimonial item -->
 
         </div>
         <div class="swiper-pagination"></div>
@@ -530,28 +526,29 @@
     )();
   </script>
 
-<script>
-  function redirecionarLogin() {
-    var email = document.getElementById('email').value;
-        var password = document.getElementById('password').value;
-        var confirmPassword = document.getElementById('confirmPassword').value;
+  <script>
+    function redirecionarLogin() {
+      var email = document.getElementById('email').value;
+          var password = document.getElementById('password').value;
+          var confirmPassword = document.getElementById('confirmPassword').value;
 
-        // Verificar se os campos estão preenchidos
-        if (email && password && confirmPassword) {
-            // Verificar se as senhas são iguais
-            if (password === confirmPassword) {
-                // Se todos os campos estiverem preenchidos e as senhas forem iguais,
-                // redirecione para a página de login
-                window.location.href = "events.html";
-            } else {
-                alert("As senhas não coincidem. Por favor, verifique.");
-            }
-        } else {
-            // Caso contrário, exiba uma mensagem de erro ou tome outra ação adequada
-            alert("Por favor, preencha todos os campos.");
-        }
-  }
-</script>
+          // Verificar se os campos estão preenchidos
+          if (email && password && confirmPassword) {
+              // Verificar se as senhas são iguais
+              if (password === confirmPassword) {
+                  // Se todos os campos estiverem preenchidos e as senhas forem iguais,
+                  // redirecione para a página de login
+                  window.location.href = "events.html";
+              } else {
+                  alert("As senhas não coincidem. Por favor, verifique.");
+              }
+          } else {
+              // Caso contrário, exiba uma mensagem de erro ou tome outra ação adequada
+              alert("Por favor, preencha todos os campos.");
+          }
+    }
+  </script>
+
 
 </body>
 
