--- a/servicos.html
+++ b/servicos.html
@@ -352,7 +352,7 @@
                 Sou imensamente grata por ter descoberto essa plataforma incrível! As microempreendedoras aqui não apenas transformam seus sonhos em sucesso, mas também compartilham suas jornadas de forma inspiradora.
                 <i class="bx bxs-quote-alt-right quote-icon-right"></i>
               </p>
-              <img src="assets/img/Luana.jpeg" class="testimonial-img" alt="">
+              <img src="./assets/imagens/Luana.jpeg" class="testimonial-img" alt="">
               <h3>Luana Santos</h3>
               <h4>Microempreendedora</h4>
             </div>
@@ -365,7 +365,7 @@
                 É incrível como essa plataforma vai além das expectativas, abraçando aspectos tão essenciais. Recomendo a todas que buscam não apenas eficiência, mas também um cuidado especial com o bem-estar. 👏🌟"
                 <i class="bx bxs-quote-alt-right quote-icon-right"></i>
               </p>
-              <img src="assets/img/Ana_Paula.jpeg" class="testimonial-img" alt="">
+              <img src="./assets/imagens/Ana_Paula.jpeg" class="testimonial-img" alt="">
               <h3>Ana Paula</h3>
               <h4>Microempreendedora</h4>
             </div>
@@ -380,7 +380,7 @@
                 Iniciando minha jornada, encontrei desafios devido à falta de conhecimento. A plataforma e o diálogo com mulheres na área têm sido essenciais, proporcionando suporte valioso. A cada obstáculo, descubro soluções e inspirações.
                 <i class="bx bxs-quote-alt-right quote-icon-right"></i>
               </p>
-              <img src="assets/img/Izabel.jpeg" class="testimonial-img" alt="">
+              <img src="./assets/imagens/Izabel.jpeg" class="testimonial-img" alt="">
               <h3>Maria Izabel</h3>
               <h4>Microempreendedora </h4>
             </div>
@@ -393,7 +393,7 @@
                 Com a EMP, finalmente consegui organizar toda a parte financeira do meu negócio! Agora, faço uma administração mais eficiente e obtenho total controle. Esta plataforma é realmente transformadora, Recomendo a todos em busca de praticidade e sucesso financeiro! 
                 <i class="bx bxs-quote-alt-right quote-icon-right"></i>
               </p>
-              <img src="assets/img/Leia Lima.png" class="testimonial-img" alt="">
+              <img src="./assets/imagens/Leia Lima.png" class="testimonial-img" alt="">
               <h3>Leia Lima</h3>
               <h4>Microempreendedora</h4>
             </div>
@@ -406,7 +406,7 @@
                 Agora, com a plataforma, meu dia a dia ficou muito mais prático, e o controle do meu gerenciamento financeiro é incrível! Além disso, tenho a oportunidade de compartilhar minha experiência com outras mulheres, ajudando a diminuir as dificuldades que enfrentam.
                 <i class="bx bxs-quote-alt-right quote-icon-right"></i>
               </p>
-              <img src="assets/img/Ediline_Santos.jpeg" class="testimonial-img" alt="">
+              <img src="./assets/imagens/Ediline_Santos.jpeg" class="testimonial-img" alt="">
               <h3>Edilene Santos</h3>
               <h4>Microempreendedora</h4>
             </div>
