--- a/dashboard.html
+++ b/dashboard.html
@@ -259,7 +259,7 @@
             <li>
               <a class="dropdown-item d-flex align-items-center" href="#">
                 <i class="bi bi-box-arrow-right"></i>
-                <span>Sair</span>
+                  <span onclick="realizarLogoff()">Sair</span>
               </a>
             </li>
 
